--- a/css/styles.css
+++ b/css/styles.css
@@ -32,12 +32,16 @@ h2 {
   background-color: rgb(150, 224, 114);
   border-radius: 2px;
   border: 1px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 label {
   margin-top: 5rem;
   margin-right: 11rem;
   font-family: 'roboto', sans-serif;
+  display: block;
 }
 
 .search-box {
