--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,18 @@ h2 {
   margin-right: auto;
 }
 
+.random-button {
+  padding: 1rem 3rem;
+  margin-top: 2rem;
+  color: white;
+  background-color: rgb(150, 224, 114);
+  border-radius: 2px;
+  border: 1px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .character-search {
   margin-top: 5rem;
   font-family: 'roboto', sans-serif;
