--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,31 @@
+.column-half {
+  width: 100%;
+}
+
+.search-button {
+  padding: 1rem 5rem;
+  margin-top: 2rem;
+  color: white;
+  background-color: rgb(150, 224, 114);
+  border-radius: 2px;
+  border: 1px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.random-button {
+  padding: 1rem 3rem;
+  margin-top: 2rem;
+  color: white;
+  background-color: rgb(150, 224, 114);
+  border-radius: 2px;
+  border: 1px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (min-width: 767px) {
   .portal-image {
     width: 50%;
@@ -5,5 +33,37 @@
 
   .column-half {
     width: 50%;
+    padding: 0 0.5rem;
+  }
+
+  .search-button {
+    margin-right: 0;
+  }
+
+  .random-button {
+    margin-left: 0;
+  }
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column-third {
+  width: calc(100 / 3);
+}
+
+.portal-image {
+  animation: rotation 20s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(359deg);
   }
 }
