--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.col-50 {
+  width: 100%;
+}
+
 .search-button {
   padding: 1rem 5rem;
   margin-top: 2rem;
@@ -14,6 +18,27 @@
   margin-right: auto;
 }
 
+.avatar-img {
+  width: 100%;
+  margin-top: 0;
+}
+
+.margin-top {
+  margin-top: 5rem;
+}
+
+.width-80 {
+  width: 80%;
+  background-color: #787878;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.border {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
 .random-button {
   padding: 1rem 3rem;
   margin-top: 2rem;
@@ -24,25 +49,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-@media screen and (min-width: 767px) {
-  .portal-image {
-    width: 50%;
-  }
-
-  .column-half {
-    width: 50%;
-    padding: 0 0.5rem;
-  }
-
-  .search-button {
-    margin-right: 0;
-  }
-
-  .random-button {
-    margin-left: 0;
-  }
 }
 
 .row {
@@ -65,5 +71,36 @@
 
   to {
     transform: rotate(359deg);
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .portal-image {
+    width: 50%;
+  }
+
+  .column-half {
+    width: 50%;
+    padding: 0 0.5rem;
+  }
+
+  .search-button {
+    margin-right: 0;
+  }
+
+  .random-button {
+    margin-left: 0;
+  }
+
+  .col-50 {
+    width: 50%;
+  }
+
+  .char-info-text {
+    margin-left: 0;
+  }
+
+  .avatar-img.border {
+    border-top-right-radius: 0;
   }
 }
