Create function for each search that returns a dom tree that appends to the page when the DomContentLoaded event fires

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,21 @@ span {
   background-color: #787878;
 }
 
+.col-25 {
+  width: 25%;
+}
+
 .column-full {
   width: 100%;
+}
+
+.background-gray {
+  background-color: #787878;
+}
+
+.result-img {
+  margin-top: 0;
+  margin-left: 0;
 }
 
 .character-search {
