--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,13 @@
   width: 100%;
 }
 
+.col-75 {
+  width: 75%;
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: center;
+}
+
 .search-button {
   padding: 1rem 5rem;
   margin-top: 2rem;
@@ -27,8 +34,12 @@
   margin-top: 5rem;
 }
 
+.margin-top-half {
+  margin-top: 2rem;
+}
+
 .width-80 {
-  width: 80%;
+  width: 90%;
   background-color: #787878;
   margin-left: auto;
   margin-right: auto;
