--- a/css/layout.css
+++ b/css/layout.css
@@ -31,7 +31,7 @@
 }
 
 .margin-top {
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .margin-top-half {
@@ -68,11 +68,11 @@
 }
 
 .column-third {
-  width: calc(100 / 3);
+  width: calc(100% / 3);
 }
 
 .portal-image {
-  animation: rotation 20s infinite linear;
+  animation: rotation 40s infinite linear;
 }
 
 @keyframes rotation {
