--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ span {
 
 .back-ground {
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhLpoEJvsK9kL9VM7oTaN0KN9epBVIujfnzg&usqp=CAU);
+  height: 105%;
 }
 
 img {
